--- a/.classpath
+++ b/.classpath
@@ -4,9 +4,12 @@
 	<classpathentry kind="lib" path="D:/Profiles/BortolameottiR/Desktop/My Distributed System/Implementation/library-BFT-SMaRt-v1.0-beta/library-BFT-SMaRt-v1.0-beta/lib/commons-codec-1.5.jar"/>
 	<classpathentry kind="lib" path="D:/Profiles/BortolameottiR/Desktop/My Distributed System/Implementation/library-BFT-SMaRt-v1.0-beta/library-BFT-SMaRt-v1.0-beta/lib/core-0.1.4.jar"/>
 	<classpathentry kind="lib" path="D:/Profiles/BortolameottiR/Desktop/My Distributed System/Implementation/library-BFT-SMaRt-v1.0-beta/library-BFT-SMaRt-v1.0-beta/lib/netty-all-4.0.25.Final.jar"/>
-	<classpathentry kind="lib" path="D:/Profiles/BortolameottiR/Desktop/My Distributed System/Implementation/library-BFT-SMaRt-v1.0-beta/library-BFT-SMaRt-v1.0-beta/lib/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="lib" path="D:/Profiles/BortolameottiR/Desktop/My Distributed System/Implementation/library-BFT-SMaRt-v1.0-beta/library-BFT-SMaRt-v1.0-beta/lib/slf4j-jdk14-1.5.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BortolameottiR/workspace/bft_log/lib/bcprov-jdk16-146.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BortolameottiR/workspace/bft_log/lib/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BortolameottiR/workspace/bft_log/lib/Scapi-2.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_45"/>
 	<classpathentry kind="lib" path="D:/Profiles/BortolameottiR/Desktop/My Distributed System/Implementation/library-BFT-SMaRt-v1.0-beta/library-BFT-SMaRt-v1.0-beta/bin/BFT-SMaRt.jar"/>
+	<classpathentry kind="lib" path="D:/Profiles/BortolameottiR/Desktop/My Distributed System/Implementation/library-BFT-SMaRt-v1.0-beta/library-BFT-SMaRt-v1.0-beta/lib/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
